# gbcc

./: CMakeLists.txt  expr_rule.txt  fn_rule.txt
libgbcc/: CMakeLists.txt  syntax.hpp  utility.cpp  utility.hpp  utility_text.cpp  utility_text_iterator.cpp  vm.hpp
libgbcc/syntaxes/: syntax_branch.cpp  syntax_branch_element.cpp  syntax_element.cpp  syntax_formula.cpp  syntax_parser.cpp  syntax_parser__lower.cpp  syntax_rule.cpp  syntax_token.cpp  syntax_token_string.cpp  syntax_token_string__read_number.cpp  syntax_token_string_iterator.cpp
libgbcc/vms/: context.hpp  expression.hpp  typesystem.hpp  vm__print.cpp  vm_execution.cpp  vm_execution__process.cpp  vm_function.cpp  vm_function__construct.cpp  vm_jobfield.cpp  vm_line.cpp  vm_memory.cpp  vm_opcode.cpp  vm_register.cpp  vm_type_info.cpp  vm_value.cpp
libgbcc/vms/contexts/: sc_block.cpp  sc_context.cpp  sc_context__construct.cpp  sc_context__process.cpp  sc_function.cpp  sc_function_execution_frame.cpp  sc_package.cpp  sc_package__construct.cpp  sc_statement.cpp
libgbcc/vms/expressions/: sc_binary_operation.cpp  sc_binary_operation__operate.cpp  sc_expression.cpp  sc_expression__assign.cpp  sc_expression_element.cpp  sc_operand.cpp  sc_unary_operation.cpp  sc_unary_operation__evaluate.cpp  sc_unary_operation__operate.cpp  sc_unary_operation_postfix_element.cpp  sc_unary_operation_prefix_element.cpp  sc_value.cpp
libgbcc/vms/typesystems/: sc_enum_definition.cpp  sc_signature.cpp  sc_struct_definition.cpp  sc_type_info.cpp  sc_union_definition.cpp
